[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysconfig-env"
version = "1.0.0"
description = "SysConfig - Linux Server Configuration Agent Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["server"]
py-modules = ["env", "models", "tasks", "inference"]
